2009-08-28 Jens Thoms Toerring    <jt@toerring.de>

	Dependence of form size on snap grid setting in fdesign
	removed since it led to unpleasant effects under KDE, form
	size can now be set directly via a popup window.

	Some more bugs with new way of reading .fd files removed.

	* lib/browser.c: Missing redraw of scrollbar added in
	fl_show_browser_line() (thanks to Werner Heisch for
	noticing and telling me about it),

2009-08-26 Jens Thoms Toerring    <jt@toerring.de>

	* README: updated to reflect new mailing list location
	and homepage

2009-08-25 Jens Thoms Toerring    <jt@toerring.de>

	A number of bugs in the new code for reading in .fd-Files
	pointed out by Werder Heisch have been removed.

2009-08-22 Jens Thoms Toerring    <jt@toerring.de>

	Thanks to lots of input (patches and discussions0 by Werner
	Heisch the way .fd files get read in and analyzed has been
	changed to be a lot more liberal of what is accepted as well
	as spitting out reasonable error messages and warnings if
	things go awry. New files added are fdesign/fd_file_fun.c
	and fdesign/sp_util.c and lots of others have been changed.

2009-08-13 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_printC.c: Some correctiions/bug fixes
	* Bit of clean-up all over the place;-)

2009-08-06 Jens Thoms Toerring    <jt@toerring.de>

	* lib/Makefile.am, gl/Makefile.am, image/Makefile.am:
	Applied patch send by Rex Dieter that changes the way the
	dynamic libraries get created so that linking explicitely
	against libX11.so and ibXpm.so (and possibly others) isn't
	necessary anymore when linking against libforms.so.

2009-07-12 Jens Thoms Toerring    <jt@toerring.de>

	* lib/objects.c: Bug in convertion of string to
	shortcut characters removed

2009-07-11 Jens Thoms Toerring    <jt@toerring.de>

	* Bit of cleanup of error handling

2009-07-10 Jens Thoms Toerring    <jt@toerring.de>

	* lib/forms.c: Forms.c split into two, 	forms.c
	and handling.c

2009-07-09 Jens Thoms Toerring    <jt@toerring.de>
